--- a/app/src/main/res/layout/activity_receiving_order_show.xml
+++ b/app/src/main/res/layout/activity_receiving_order_show.xml
@@ -461,7 +461,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="是否保价："
+                        android:text="是否报价："
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
@@ -737,7 +737,7 @@
                     android:layout_height="36dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/bg_btn_bind_lock"
-                    android:text="确定"
+                    android:text="报价"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
