--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="color_text_label">#2DA1E6</color>
 
     <color name="color_red">#FF0000</color>
-
+    <color name="color_gray">#F0F0F0</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
