--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -29,6 +29,14 @@
             android:textColor="@color/white"
             android:textSize="@dimen/font_content_size_2" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="placeorder"
+            android:textColor="@color/white"
+            android:layout_toRightOf="@id/search_back_btn"
+            android:layout_centerVertical="true"/>
+
     </RelativeLayout>
 
     <View
